kubernetes/gitops/wazuh-ssl/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: wazuh-svc
  namespace: wazuh-ssl
subsets:
- addresses:
  - ip: 10.11.50.5
  ports:
  - port: 443
