kubernetes/gitops/wazuh-ssl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-svc
  namespace: wazuh-ssl
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: wazuh-ssl-skip-tls-wazuh@kubernetescrd
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
