kubernetes/gitops/wazuh-ssl/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wazuh-route
  namespace: wazuh-ssl
spec:
  entryPoints:
    - wazuh 
  routes:
    - match: PathPrefix(`/`) 
      kind: Rule
      services:
        - name: wazuh-svc
          port: 443
          scheme: https
          serversTransport: skip-tls-wazuh
  tls:
    secretName: aleixolab-tls
